# graph_calculator

./: animals.csv  coolness.yaml  example_one.py  example_one_output.txt  example_two.py  pyproject.toml
src/graph_calculator/: __init__.py  animals.py  graph.py
